--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-[dependencies.sdl2]
-version = "0.34.3"
-default-features = false
-features = ["image"]
-
-[dependencies.glam]
-version = "0.12.0"
+tetra = "0.6"
